--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -152,7 +152,32 @@ header{
 
 
 
-*{}
+a{text-decoration: none;}
+
+.courses-desktop{
+    display: none;
+}
+
+.courses-mobile{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: aliceblue;
+}
+
+.courses-heading-mobile{
+    text-align: center;
+    margin-top: 32px;
+    margin-bottom: 16px;
+}
+
+.course-mobile{
+    margin: 8px 16px;
+    padding: 0 16px;
+    padding-top: 16px;
+    padding-bottom: 24px;    
+    background-color: lightgray;
+}
 
     
 }
@@ -330,6 +355,61 @@ margin-right: 24px;
 .main-section-aside-mobile{
     display: none;
 }
+
+ .courses-desktop{
+     margin: 32px 0;
+     display: flex;
+     flex-direction: column;
+     background-color:  aliceblue;
+     align-items: center;
+     
+      
+ }
+ .courses-heading-desktop{
+     margin: 32px;
+ }
+
+ .courses-detail-desktop{   
+     margin: 0 40px;
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: center;
+     padding-left: 16px;
+     
+ }
+
+ .courses-info-desktop{
+     margin: 32px;
+     width: 25%;
+    background-color: white;
+     
+ }
+
+ .course-detail-desktop h3{
+     margin: 8px 0;
+    
+     
+
+ }
+
+ .course-detail-desktop h2{
+     padding-top: 16px;
+     
+ }
+
+ .course-detail-desktop p{
+     padding-bottom: 24px;
+ }
+
+ .course-image-desktop img{
+     display: block;
+     max-width: 100%;
+     height: auto;
+ }
+
+ .courses-mobile{
+     display: none;
+ }
 }
 
 
