--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -179,7 +179,38 @@ a{text-decoration: none;}
     background-color: lightgray;
 }
 
+.exhibit-desktop{
+    display: none;
+}
+
+.exhibit-mobile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
+}
+
+.exhibit-header-mobile{
+    margin-top: 32px;
+    margin-bottom: 16px;
+    
+}
+
+
+.exhibit-video-mobile video{
+    width: 100%;
+}
+
+.exhibit-video-mobile{
+    margin-bottom: 24px;
+}
+
+.footer-aside{
+    display: none;
+}
+.main-footer-text{
+    padding: 16px;
+}
 }
 
 @media only screen and (min-device-width:  480px){
@@ -409,6 +440,106 @@ margin-right: 24px;
 
  .courses-mobile{
      display: none;
+ }
+
+ .exhibit-mobile{
+     display: none;
+ }
+ 
+ .exhibit-desktop{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+ }
+ .exhibit-header-desktop{
+     margin: 32px;
+     
+ }
+
+ .exhibit-content-desktop{
+     display: flex;
+     height: auto;
+     margin-bottom: 32px;
+
+     
+   
+ }
+ 
+ .exhibit-video-text{
+     width: 60%;
+ }
+
+ .exhibit-video video{
+     width: 100%;
+     height: auto;
+ }
+ .exhibit-video-text{
+     margin-left: 24px;
+     margin-bottom: 32px;
+     margin-top: 32px;
+ }
+.exhibit-text{
+    margin-top: 24px;
+}
+
+.exhibit-text h2{
+    margin-top: 8px;
+}
+ .exhibit-aside{
+     
+     width: 40%; 
+     margin: 24px;
+ }
+ .exhibit-aside-content{
+     display: flex;
+     align-items: center;
+     
+     /* justify-content: space-between; */
+     /* width: 65%; */
+     
+ }
+
+ .aside-text{
+     margin: 16px;
+ }
+
+
+ .aside-image{
+    width: 35%;
+ }
+ .aside-image img{
+     width: 100%;
+     display: block;
+     height: auto;
+     margin: 16px 0;
+     
+ }
+
+ footer{
+     display: flex;
+     border-top: 2px solid lightgrey;
+     margin-top: 32px;
+
+ }
+
+ footer h3{
+     
+     padding: 16px 24px;
+ }
+
+ .main-footer-text{
+     flex: 1;
+     padding: 16px 24px;
+ }
+
+ .footer-aside ul li{
+     display: inline;
+     padding: 5px;
+     
+     
+ }
+ .footer-aside ul{
+     padding-top:16px ;
  }
 }
 
