--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,7 +18,7 @@ header{
     z-index: 100;
     height: 64px;
     align-items: center;
-    background-color: aqua;
+    background-color:whitesmoke;
     
    
 }
@@ -359,7 +359,12 @@ margin-right: 24px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: background-color 1ms;
     
+}
+
+.aside-desktop:hover{
+    background-color: lightgrey;
 }
 
 
@@ -493,10 +498,14 @@ margin-right: 24px;
  .exhibit-aside-content{
      display: flex;
      align-items: center;
+     transition: background-color 1ms;
      
      /* justify-content: space-between; */
      /* width: 65%; */
      
+ }
+ .exhibit-aside-content:hover{
+     background-color: lightgrey;
  }
 
  .aside-text{
