Fixing courses margin

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -421,6 +421,11 @@ margin-right: 24px;
      
  }
 
+ .course-detail-desktop{
+margin-left: 16px;
+
+ }
+
  .course-detail-desktop h3{
      margin: 8px 0;
     
